--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+1.1.0 - Changes from 1.0.1
+1. Adds support for any device connected via an HDMI capture card with bluetooth/ir support.
+2. Fixes the width size calculations of multi word match elements.
+
 1.0.1 - Changes from 1.0.0
 1. Improves image capture performance from the collectors and reduces image copy redundancy.
 2. Fixes an issue where complicated multi-word finds were evaluating as false during evaluation.
