--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+1.1.1 - Changes from 1.1.0
+1. Removes the DeviceIP as a required capability for HDMI test devices.
+
 1.1.0 - Changes from 1.0.1
 1. Adds support for any device connected via an HDMI capture card with bluetooth/ir support.
 2. Fixes the width size calculations of multi word match elements.
