--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+1.2.4 - Changes from 1.2.3
+1. Adds support for Roku WebDriver including text/tag/attribute locators, media info, and more.
+
 1.2.3 - Changes from 1.2.2
 1. Adds the ability to set/get session status.
 2. Upgrades Jetty to latest version 9.4.24.v20191120
