--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,7 +1,8 @@
-1.2.6 - Changes from 1.2.5 (IN PROGRESS)
+1.2.6 - Changes from 1.2.5
 1. Adds the ability to capture the roku images in the original jpeg format to reduce file overhead in flight
 2. Fixes a possible permission issue on Roku WebDriver dependency install.
 3. Adds the ability to get the Roku debug logs.
+4. Adds the ability to reboot a Roku device.
 
 1.2.5 - Changes from 1.2.4
 1. Adds the ability to get installed app and active app info for Roku.
